# ssh-mcp-server

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  ssh_mcp_server.py
.github/workflows/: dependency-security.yml  pylint.yml  test.yml
docs/: DEPENDENCIES.md  dependency-report.json
scripts/: generate_dependency_report.py
src/ssh_mcp_server/: __init__.py  credentials.py  server.py
tests/: __init__.py
