[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-mcp-server"
version = "0.1.1"
description = "MCP server providing SSH client functionality for remote Linux server management"
authors = [{name = "Rory McMahon", email = "rory.mcmahon@vocus.com.au"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mcp", "ssh", "linux", "remote", "management", "paramiko"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp==1.14.1",
    "paramiko==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "mypy>=1.0.0",
]
security = [
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/InfraMCP/ssh-mcp-server"
Repository = "https://github.com/InfraMCP/ssh-mcp-server"
Issues = "https://github.com/InfraMCP/ssh-mcp-server/issues"
Documentation = "https://github.com/InfraMCP/ssh-mcp-server#readme"

[project.scripts]
ssh-mcp-server = "ssh_mcp_server:main"
ssh-mcp-auth = "ssh_mcp_server.auth_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
